refactor : removed customer and put user in place of it for better user management